feat: Read resources properly and adjust min per node heap limit (#25690)
Signed-off-by: Georgi Grigorov <georgi.grigorov@limechain.tech>